Per @james, adding questionId to link table
