# controllers/link.controller.js
@@ -11,7 +11,9 @@ exports.createLink = function createLink(req, res) {
     const field1 = _.get(req, 'swagger.params.field1.value');
     const field2 = _.get(req, 'swagger.params.field2.value');
     const sourceDate = _.get(req, 'swagger.params.sourceDate.value');
-    req.models.link.createLink(userId, { name, url, displayTypeId, field1, field2, sourceDate })
+    const questionId = _.get(req, 'swagger.params.questionId.value');
+
+    req.models.link.createLink(userId, { name, url, displayTypeId, field1, field2, sourceDate, questionId })
         .then(result => res.status(201).json(result))
         .catch(shared.handleError(res));
 };
