# models/dao/link.dao.js
@@ -4,13 +4,13 @@ const Base = require('./base');
 const SurveyError = require('../../lib/survey-error');
 
 module.exports = class LinkDAO extends Base {
-    createLink(userId, { url, displayTypeId, field1, field2, sourceDate }) {
-        return this.db.Link.create({ userId, url, displayTypeId, field1, field2, sourceDate })
+    createLink(userId, { url, displayTypeId, field1, field2, sourceDate, questionId }) {
+        return this.db.Link.create({ userId, url, displayTypeId, field1, field2, sourceDate, questionId })
             .then(({ id }) => ({ id }));
     }
 
     getLink(userId, id) {
-        const attributes = ['url', 'displayTypeId', 'field1', 'field2', 'sourceDate'];
+        const attributes = ['url', 'displayTypeId', 'field1', 'field2', 'sourceDate', 'questionId'];
         return this.db.Link.findById(id, { raw: true, where: { userId }, attributes })
             .then((record) => {
                 if (!record) {
@@ -21,7 +21,7 @@ module.exports = class LinkDAO extends Base {
     }
 
     listLinks(userId) {
-        const attributes = ['id', 'url', 'displayTypeId', 'field1', 'field2', 'sourceDate'];
+        const attributes = ['id', 'url', 'displayTypeId', 'field1', 'field2', 'sourceDate', 'questionId'];
         return this.db.Link.findAll({ raw: true, where: { userId }, attributes, order: 'id' });
     }
 };
